--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="topbar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-photo.jpg" alt="Ayan Antik Khan" width="80">
+          <img src="./assets/images/suit3.jpg" alt="Ayan Antik Khan" width="80">
         </figure>
 
         <div class="info-content">
