--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
           <ol class="timeline-list">
             <li class="timeline-item">
               <h4 class="h4">Bangla Complex Named Entity Recognition Challenge</h4>
-              <span>Participation</span>
+              <span>Finalist</span>
               <span>January 2023</span>
               <p class="timeline-text"><a style="display: inline;" href='https://github.com/Ayan-Antik/Bangla-Named-Entity-Recognition'>[View in Github]</a></p>
               <p class="timeline-text">
