--- a/index.html
+++ b/index.html
@@ -229,7 +229,8 @@
                 <span class="publication">Jayanta Sadhu, <b>Ayan Antik Khan</b>, Abhik Bhattacharjee, Rifat Shahriyar </span>
                 <span class="publication">Accepted at ACL 2024 (Findings) </span>
                 <span class="publication"><b>Same contribution as 1st author</b></span>
-                <span class="publication">Natural Language Processing, Bias and Fairness, Language Models, Inference</span>
+                <span class="publication"><i>Natural Language Processing, Bias and Fairness, Language Models, Inference</i></span>
+                <span><i><a href="https://arxiv.org/abs/2406.17375" target="_blank">[Preprint available here]</a></i></span>
                 <span> Undergraduate Thesis project under the supervision of Dr Rifat Shahriyar. In this study, we investigate 
                   gender bias in Bangla, a low-resource language, by creating a specialized dataset and adapting existing bias 
                   measurement methods to fit the linguistic context. Our research highlights the significant impact of context length 
