--- a/index.html
+++ b/index.html
@@ -182,7 +182,11 @@
       <article class="resume" data-page="resume">
 
         <header>
-          <h2 class="h2 article-title">Resume</h2>
+          <h2 class="h2 article-title">Resume 
+            <a href="assets/files/Ayan-Antik-Khan-CV.pdf" title="Download CV" target="_blank" style="color: cornflowerblue;">
+              <ion-icon id="download-cv" name="download-outline" style="display: inline-block; cursor: pointer;"></ion-icon> 
+            </a>
+          </h2> 
         </header>
 
         <section class="timeline">
@@ -203,7 +207,7 @@
 
               <span>IQVIA</span>
               <span>June 2024 - Present</span>
-              <span><b>Awarded the <a href="assets/files/Impact award.pdf" target="_blank">IQVIA Gold Impact Award</a> 
+              <span><b>Awarded the <a href="assets/files/Ayan-Antik-Khan-Impact-Award.pdf" target="_blank">IQVIA Gold Impact Award</a> 
                 for contributions to the team</b></span>
 
             </li>
@@ -637,7 +641,7 @@
               <h4 class="h4">IQVIA Gold Impact Award</h4>
               <span><a href="https://www.iqvia.com/" target="_blank"></a>IQVIA</span>
               <span>July 2024</span>
-              <span><a href="assets/files/Impact award.pdf" target="_blank">Award</a></span>
+              <span><a href="assets/files/Ayan-Antik-Khan-Impact-Award.pdf" target="_blank">Award</a></span>
               <p class="timeline-text">
                 Received the IQVIA Gold Impact Award for contributions to the team
               </p>
