add proceedings to publication

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
               href="https://cse.buet.ac.bd/faculty_list/detail/rifat">Dr Rifat Shahriyar</a>. In
             the thesis, our goal was to find the presence of bias in Bangla Language Models. Based on our thesis work,
             we have published a paper
-            titled <a href="https://arxiv.org/abs/2406.17375">
+            titled <a href="https://aclanthology.org/2024.findings-acl.88/">
               An Empirical Study on the Characteristics of Bias upon Context Length Variation for Bangla
             </a> which was accepted for poster presentation in the Findings of <a href="https://2024.aclweb.org/">ACL
               2024</a>.
@@ -269,8 +269,10 @@
                 <span class="publication"><b>Same contribution as 1st author</b></span>
                 <span class="publication"><i>Natural Language Processing, Bias and Fairness, Language Models,
                     Inference</i></span>
-                <span><a href="https://arxiv.org/abs/2406.17375" target="_blank">[<u>Preprint available
-                      here</u>]</a></span>
+                <span>
+                  <a href="https://arxiv.org/abs/2406.17375" target="_blank">[<u>Preprint</u>]</a>
+                  <a href="https://aclanthology.org/2024.findings-acl.88/" target="_blank">[<u>Proceedings</u>]</a>
+                </span>
                 <span> Undergraduate Thesis project under the supervision of <a
                   href="https://cse.buet.ac.bd/faculty_list/detail/rifat">Dr Rifat Shahriyar</a>. In this study, we
                   investigate
