--- a/index.html
+++ b/index.html
@@ -154,12 +154,13 @@
               Orchestrated Analytics
             </a> project. My areas of interest encompass Deep Learning and its various sub-domains,
             with a particular focus on Natural Language Processing (NLP).
-            I am especially passionate about exploring the concepts of Fairness and Bias in Natural Language models. 
+            I am especially passionate about exploring the concepts of Fairness and Bias in Language models as well as the applications of
+            NLP in the field of Human Computer Interaction (HCI). 
             My current career goal is to pursue a graduate program in my field of interest.
           </p>
 
           <p>
-            <img src="assets/images/research.svg" style="display: inline;">My undergraduate thesis project was under <a
+            <img src="assets/images/research.svg" style="display: inline;">My undergraduate thesis was under <a
               href="https://cse.buet.ac.bd/faculty_list/detail/rifat">Dr Rifat Shahriyar</a>. In
             the thesis, our goal was to find the presence of bias in Bangla Language Models. Based on our thesis work,
             we have published a paper
@@ -171,9 +172,8 @@
           <p>
             <img src="assets/images/code.svg" style="display: inline;"> I am currently part of the <a
               href="https://www.iqvia.com/library/fact-sheets/kpi-library">KPI Library</a> Engineering
-            FrontEnd Team. My daily responsibilities include maintaining the existing codebase, developing new features,
-            and working on
-            Proof of Concept (POC) projects for upcoming features.
+            FrontEnd Team. My daily responsibilities include developing new features, maintaining the existing codebase,
+            and working on Proof of Concept (POC) projects for upcoming features.
           </p>
         </section>
 
@@ -218,6 +218,9 @@
             </li>
             <li class="timeline-item">
               <h4 class="h4 timeline-item-title">LLMs</h4>
+            </li>
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Application of Natural Language Processing in Human Computer Interaction</h4>
             </li>
           </ol>
         </section>
@@ -273,7 +276,7 @@
                   <a href="https://arxiv.org/abs/2406.17375" target="_blank">[<u>Preprint</u>]</a>
                   <a href="https://aclanthology.org/2024.findings-acl.88/" target="_blank">[<u>Proceedings</u>]</a>
                 </span>
-                <span> Undergraduate Thesis project under the supervision of <a
+                <span> Undergraduate Thesis under the supervision of <a
                   href="https://cse.buet.ac.bd/faculty_list/detail/rifat">Dr Rifat Shahriyar</a>. In this study, we
                   investigate
                   gender bias in Bangla, a low-resource language, by creating a specialized dataset and adapting
