fix styles, add underlines to links

--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
 
             <li class="project-item  active" data-filter-item data-category="machine learning">
               <a href="https://github.com/Ayan-Antik/Bangla-Grammatical-Error-Detection">
-                <h2 class="project-title">Grammatical Error Detection in Bangla</h2>
+                <h2 class="project-title">Grammatical Error Detection and Correction in Bangla</h2>
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -466,11 +466,12 @@
                     View on Github</a></p>
                 <p class="project-tech-stack">Pytorch, Huggingface, Sklearn</p>
                 <p class="project-category">Term Project for CSE 472: Machine Learning Sessional (CSE Department, BUET).
-                  This project focuses on detecting grammatical errors in Bangla sentences. To achieve this, we create a
-                  dataset by introducing
-                  grammatical errors randomly into a collection of Bangla newspaper articles. We then fine-tune Bangla
-                  Language Models on
-                  this synthesized dataset to identify grammatical errors in Bangla text.
+                  This project focuses on detecting and correcting grammatical errors in Bangla sentences. To achieve this, we create a
+                  dataset by synthetically introducing error in a newspaper datset. Achieved 93% accuracy in detecting incorrect Bangla 
+                  sentences by incorporating Sequence Tagging with 
+                  <a class='inline' href="https://huggingface.co/csebuetnlp/banglabert" target="_blank">BanglaBERT</a>
+                  and a sacreBLEU score of 90 for sentence correction and auto-completion using 
+                  <a class="inline" href="https://huggingface.co/csebuetnlp/banglat5" target="_blank">BanglaT5</a>.
 
                 </p>
 
@@ -496,7 +497,7 @@
                 <p class="project-category">A vectorized implementation of a Convolutional Neural Network using
                   numpy without any deeplearning frameworks.
                   Training and testing of the developed model is done on the
-                  <a style="display: inline;" href="https://www.kaggle.com/datasets/BengaliAI/numta">NumtaDB</a>:
+                  <a class="inline" href="https://www.kaggle.com/datasets/BengaliAI/numta">NumtaDB</a>:
                   Bengali Handwritten Digits dataset.
                   This was the final assignment of the CSE 472: Machine Learning Sessional course offered by CSE
                   Department, BUET.
@@ -689,7 +690,7 @@
               <h4 class="h4">Bangla Complex Named Entity Recognition Challenge</h4>
               <span>Finalist</span>
               <span>January 2023</span>
-              <p class="timeline-text"><a style="display: inline;"
+              <p class="timeline-text"><a class="inline"
                   href='https://github.com/Ayan-Antik/Bangla-Named-Entity-Recognition'>[View in Github]</a></p>
               <p class="timeline-text">
                 Participated in the Bangla Complex Named Entity Recognition Challenge, part of the
@@ -721,7 +722,7 @@
               <span>November 2022</span>
               <p class=" timeline-text">
                   Received research grant from <a href="https://rise.buet.ac.bd/" target="_blank"
-                    style="display: inline;">RISE</a> (Research and Innovation Center for Science and Engineering)
+                    class="inline">RISE</a> (Research and Innovation Center for Science and Engineering)
                   for our undergraduate thesis titled <b>Towards Bias Free Natural Language Processing for Bangla</b>.
                   We also presented our thesis in a poster presentation
                   arranged by RISE.
