--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
                   the C language.
                   Besides the basics (conditions, loops and functions), I also implemented <i>recursive functions</i> as
                   a bonus task.
-                  This assignments are for the CSE 310: Compiler Sessional. </p>
+                  The assignments are for the CSE 310: Compiler Sessional course. </p>
 
               </a>
             </li>
