--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
           <div class="title-wrapper">
             <div class="icon-box">
-              <ion-icon name="briefcase-outline"></ion-icon>
+              <ion-icon name="bulb-outline"></ion-icon>
             </div>
 
             <h3 class="h3 skills-title">Research Interests</h3>
