Update work description

--- a/index.html
+++ b/index.html
@@ -172,8 +172,9 @@
           <p>
             <img src="assets/images/code.svg" style="display: inline;"> I am currently part of the <a
               href="https://www.iqvia.com/library/fact-sheets/kpi-library">KPI Library</a> Engineering
-            FrontEnd Team. My daily responsibilities include developing new features, maintaining the existing codebase,
-            and working on Proof of Concept (POC) projects for upcoming features.
+            FrontEnd Team, where we work with Clinical Data to build and maintain an Orchestrated Analytics product suite. 
+            My daily responsibilities include developing new features, maintaining the existing codebase,
+            and working on Proof of Concept (POC) projects.
           </p>
         </section>
 
