--- a/index.html
+++ b/index.html
@@ -155,8 +155,7 @@
             </a> project. My areas of interest encompass Deep Learning and its various sub-domains,
             with a particular focus on Natural Language Processing (NLP).
             I am especially passionate about exploring the concepts of Fairness and Bias in Language models as well as the applications of
-            NLP in the field of Human Computer Interaction (HCI). 
-            My current career goal is to pursue a graduate program in my field of interest.
+            NLP in the field of Human Computer Interaction (HCI). I aim to contribute to developing AI systems that mitigate bias and ensure fairness, creating models that are both safe and ethically responsible for real-world use. My current career goal is to pursue a graduate program in my field of interest.
           </p>
 
           <p>
