--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
                 <p class="project-tech-stack">NS3</p>
                 <p class="project-category">Simulation and implementation of a congestion control algorithm on two
                   different topologies using NS3 - a network simulator.
-                  This was the term project for the CCSE 322: Computer Networks course offered by the CSE Department of
+                  This was the term project for CSE 322: Computer Networks course offered by the CSE Department of
                   BUET.</p>
 
               </a>
