--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
               <h4 class="h4 timeline-item-title">LLMs</h4>
             </li>
             <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Application of Natural Language Processing in Human Computer Interaction</h4>
+              <h4 class="h4 timeline-item-title">Application of Natural Language Processing in Human AI Interaction</h4>
             </li>
           </ol>
         </section>
@@ -258,7 +258,7 @@
               <ion-icon name="newspaper-outline"></ion-icon>
             </div>
 
-            <h3 class="h3 skills-title">Publications</h3><br>
+            <h3 class="h3 skills-title">Research & Publications</h3><br>
           </div>
           <div class="publication-text">
             <ol class="timeline-list">
@@ -290,10 +290,22 @@
                   comprehensive bias measurement in Bangla, with all resources made publicly available to support future
                   research.</span>
               </li>
+              <li class="timeline-item">
+                <h4 class="h4 timeline-item-title">
+                  Multi-ToM: Evaluating Multilingual Theory of Mind Capabilities in Large Language Models
+                </h4>
+                <span class="publication">Jayanta Sadhu, <b>Ayan Antik Khan</b>, Noshin Nawal, Sanju Basak, Abhik Bhattacharjee, Rifat Shahriyar
+                </span>
+                <span class="publication">Under Review for COLING 2025</span>
+                <span class="publication"><b>Same contribution as 1st author</b></span>
+                <span class="publication"><i>LLMs, Theory of Mind, Cognitive Reasoning, Multilingual LMs</i></span>
+                <span>
+                  <span> Research project with <a
+                    href="https://csebuetnlp.github.io/">BUET CSE NLP Group</a>. In this study, we explore the cognitive reasoning abilities of Multilingual Large Language Models within the domain of <a href="https://en.wikipedia.org/wiki/Theory_of_mind">Theory of Mind (ToM)</a>. Our research incorporates cultural elements into ToM tasks, capturing the social and cognitive scenarios unique to various cultural contexts.
+                  </li>
             </ol>
-
           </div>
-
+          
         </section>
 
         <section class="timeline">
