Update CV, fix links

--- a/index.html
+++ b/index.html
@@ -155,22 +155,22 @@
             </a> project. My areas of interest encompass Deep Learning and its various sub-domains,
             with a particular focus on Natural Language Processing (NLP).
             I am especially passionate about exploring the concepts of Fairness and Bias in Language models as well as the applications of
-            NLP in the field of Human Computer Interaction (HCI). I aim to contribute to developing AI systems that mitigate bias and ensure fairness, creating models that are both safe and ethically responsible for real-world use. My current career goal is to pursue a graduate program in my field of interest.
+            NLP in the field of Human Computer Interaction (HCI). I aim to contribute towards developing AI systems that mitigate bias and ensure fairness, creating models that are both safe and ethically responsible for real-world use. My current career goal is to pursue a graduate program in my field of interest.
           </p>
 
           <p>
             <img src="assets/images/research.svg" style="display: inline;">My undergraduate thesis was under <a
-              href="https://cse.buet.ac.bd/faculty_list/detail/rifat">Dr Rifat Shahriyar</a>. In
-            the thesis, our goal was to find the presence of bias in Bangla Language Models. Based on our thesis work,
+              href="https://cse.buet.ac.bd/faculty/faculty_detail/rifat" target="_blank">Dr Rifat Shahriyar</a>. In
+            the thesis, our goal was to detect gender bias in Bangla Language Models. Based on our thesis work,
             we have published a paper
-            titled <a href="https://aclanthology.org/2024.findings-acl.88/">
+            titled <a href="https://aclanthology.org/2024.findings-acl.88/" target="_blank">
               An Empirical Study on the Characteristics of Bias upon Context Length Variation for Bangla
-            </a> which was accepted for poster presentation in the Findings of <a href="https://2024.aclweb.org/">ACL
+            </a> which was accepted for poster presentation in the Findings of <a href="https://2024.aclweb.org/" target="_blank">ACL
               2024</a>.
           </p>
           <p>
             <img src="assets/images/code.svg" style="display: inline;"> I am currently part of the <a
-              href="https://www.iqvia.com/library/fact-sheets/kpi-library">KPI Library</a> Engineering
+              href="https://www.iqvia.com/library/fact-sheets/kpi-library" target="_blank">KPI Library</a> Engineering
             FrontEnd Team, where we work with Clinical Data to build and maintain an Orchestrated Analytics product suite. 
             My daily responsibilities include developing new features, maintaining the existing codebase,
             and working on Proof of Concept (POC) projects.
@@ -211,16 +211,16 @@
 
           <ol class="timeline-list">
             <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Natural Language Processing</h4>
+              <h4 class="h4 timeline-item-title">Trustworthy Natural Language Processing</h4>
             </li>
             <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Bias & Fairness in Models</h4>
+              <h4 class="h4 timeline-item-title">Cognition & Reasoning in LLMs</h4>
             </li>
             <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">LLMs</h4>
+              <h4 class="h4 timeline-item-title">Low-Resource, Multilingual & Cross-Lingual NLP</h4>
             </li>
             <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Application of Natural Language Processing in Human AI Interaction</h4>
+              <h4 class="h4 timeline-item-title">Application of NLP in Human AI Interaction</h4>
             </li>
           </ol>
         </section>
@@ -270,8 +270,7 @@
                 </span>
                 <span class="publication">Accepted at ACL 2024 (Findings) </span>
                 <span class="publication"><b>Same contribution as 1st author</b></span>
-                <span class="publication"><i>Natural Language Processing, Bias and Fairness, Language Models,
-                    Inference</i></span>
+                <span class="publication"><i>Bias and Fairness, Low-Resource NLP</i></span>
                 <span>
                   <a href="https://arxiv.org/abs/2406.17375" target="_blank">[<u>Preprint</u>]</a>
                   <a href="https://aclanthology.org/2024.findings-acl.88/" target="_blank">[<u>Proceedings</u>]</a>
@@ -298,7 +297,7 @@
                 </span>
                 <span class="publication">Under Review for COLING 2025</span>
                 <span class="publication"><b>Same contribution as 1st author</b></span>
-                <span class="publication"><i>LLMs, Theory of Mind, Cognitive Reasoning, Multilingual LMs</i></span>
+                <span class="publication"><i>LLM Reasoning, Theory of Mind, Multilingual NLP</i></span>
                 <span>
                   <span> Research project with <a
                     href="https://csebuetnlp.github.io/">BUET CSE NLP Group</a>. In this study, we explore the cognitive reasoning abilities of Multilingual Large Language Models within the domain of <a href="https://en.wikipedia.org/wiki/Theory_of_mind">Theory of Mind (ToM)</a>. Our research incorporates cultural elements into ToM tasks, capturing the social and cognitive scenarios unique to various cultural contexts.
