--- a/index.html
+++ b/index.html
@@ -298,6 +298,7 @@
                 <span class="publication">Under Review for COLING 2025</span>
                 <span class="publication"><b>Same contribution as 1st author</b></span>
                 <span class="publication"><i>LLM Reasoning, Theory of Mind, Multilingual NLP</i></span>
+                <a href="https://arxiv.org/abs/2411.15999" target="_blank">[<u>Preprint</u>]</a>
                 <span>
                   <span> Research project with <a
                     href="https://csebuetnlp.github.io/">BUET CSE NLP Group</a>. In this study, we explore the cognitive reasoning abilities of Multilingual Large Language Models within the domain of <a href="https://en.wikipedia.org/wiki/Theory_of_mind">Theory of Mind (ToM)</a>. Our research incorporates cultural elements into ToM tasks, capturing the social and cognitive scenarios unique to various cultural contexts.
