Add News and Updates

--- a/index.html
+++ b/index.html
@@ -138,8 +138,21 @@
         - #ABOUT
       -->
 
-      <article class="about  active" data-page="about">
+      <article class="about active" data-page="about">
+        
+        <header>
+          <h2 class="h2 article-title">News and Updates</h2>
+        </header>
 
+        <section class="news-text">
+          <span class="news-list">
+            <span class="news-date">04/2025</span> &nbsp;🎉 Promoted to SDE 2 at <a href=" https://www.iqvia.com" target="_blank">IQVIA</a> 
+          </span>
+          <!-- <span class="news-list">
+            <span class="news-date">03/2025</span> &nbsp;🎉 Accepted a PhD position at the CS Depart <a href=" https://www.iqvia.com" target="_blank">IQVIA</a> 
+          </span> -->
+        </section>
+  
         <header>
           <h2 class="h2 article-title">About me</h2>
         </header>
