--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
         <section class="news-text">
           <span class="news-list">
-            <span class="news-date">04/2025</span> &nbsp;🎉 Promoted to SDE 2 at <a href=" https://www.iqvia.com" target="_blank">IQVIA</a> 
+            🎉 Promoted to SDE 2 at <a href=" https://www.iqvia.com" target="_blank">IQVIA</a>! Grateful for the team's incredible support. <span class="news-date">(04/2025)</span> 
           </span>
           <!-- <span class="news-list">
             <span class="news-date">03/2025</span> &nbsp;🎉 Accepted a PhD position at the CS Depart <a href=" https://www.iqvia.com" target="_blank">IQVIA</a> 
