--- a/index.html
+++ b/index.html
@@ -146,6 +146,11 @@
 
         <section class="news-text">
           <span class="news-list">
+            🎉 Started PhD at George Mason University CS with a Graduate Teaching Assistantship! 
+            <span class="news-date">(08/2025)</span>
+          </span>
+          <br>
+          <span class="news-list">
             🎉 Promoted to SDE 2 at <a href=" https://www.iqvia.com" target="_blank">IQVIA</a>! Grateful for the team's
             incredible support. <span class="news-date">(04/2025)</span>
           </span>
@@ -160,19 +165,7 @@
 
         <section class="about-text">
           <p>
-            <img src="assets/images/boy.svg" style="display: inline;"> Hi, This is Antik. A recent graduate from the
-            <a href="https://cse.buet.ac.bd" target="_blank"">Department of CSE, BUET</a>. I am currently working 
-            as a Software Development Engineer in <a href=" https://www.iqvia.com" target="_blank">IQVIA</a> under the
-            <a
-              href="https://www.iqvia.com/solutions/technologies/performance-management-and-insights/orchestrated-analytics">
-              Orchestrated Analytics
-            </a> project. My areas of interest encompass Deep Learning and its various sub-domains,
-            with a particular focus on Natural Language Processing (NLP).
-            I am especially passionate about exploring the concepts of Fairness and Bias in Language models as well as
-            the applications of
-            NLP in the field of Human Computer Interaction (HCI). I aim to contribute towards developing AI systems that
-            mitigate bias and ensure fairness, creating models that are both safe and ethically responsible for
-            real-world use. My current career goal is to pursue a graduate program in my field of interest.
+            <img src="assets/images/boy.svg" style="display: inline;"> Hi, I am a first year CS PhD student at George Mason University. My research experience is in the domain of Fairness and Bias in Language models. I am also very interested to explore the reasoning capabilities of Large Language Models. 
           </p>
 
           <p>
@@ -185,14 +178,6 @@
             </a> which was accepted for poster presentation in the Findings of <a href="https://2024.aclweb.org/"
               target="_blank">ACL
               2024</a>.
-          </p>
-          <p>
-            <img src="assets/images/code.svg" style="display: inline;"> I am currently part of the <a
-              href="https://www.iqvia.com/library/fact-sheets/kpi-library" target="_blank">KPI Library</a> Engineering
-            FrontEnd Team, where we work with Clinical Data to build and maintain an Orchestrated Analytics product
-            suite.
-            My daily responsibilities include developing new features, maintaining the existing codebase,
-            and working on Proof of Concept (POC) projects.
           </p>
         </section>
 
@@ -856,7 +841,7 @@
                 <p class="contact-title">Email</p>
 
                 <a href="mailto:ayanantikkhan@gmail.com" class="contact-link">ayanantikkhan AT gmail DOT com</a>
-                <a href="mailto:ayanantik.khan@iqvia.com" class="contact-link">ayanantik DOT khan AT iqvia DOT com</a>
+                <a href="mailto:akhan265@gmu.edu" class="contact-link">akhan265 AT gmu DOT edu</a>
                 <a href="mailto:1705036@ugrad.cse.buet.ac.bd" class="contact-link">1705036 AT ugrad DOT cse DOT buet DOT
                   ac DOT bd</a>
               </div>
